# CukaiPandai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  biome.json  commitlint.config.js  docker-compose.yml  package.json  pyproject.toml  runbook.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/api/: auth.py  graph.py  jsonio.py  llm.py  main.py  persistence.py  report.py  schemas.py
backend/api/agents/: audit_defense.py  audit_risk.py  citation_critic.py  deductibility.py  documents.py  pandai_persona.py  pandai_primer.md  profiler.py
backend/api/connectors/: msic.py
backend/core/: citations.py  computation.py  config_loader.py  deadlines.py  evidence.py  lawcorpus.py  models.py  obligations.py  rag.py  tax_accounts.py
backend/core/config/: ya_2026.yaml
backend/core/fixtures/: entity_acme.json  entity_selera.json  entity_sinar.json  lawcorpus_seed.json  msic_sample.json  myinvois_acme.json  trial_balance_acme.json
backend/migrations/: neon_schema.sql
backend/scripts/: build_rag_index.py  gen_sample_docs.py  sample_financials.json  spike_ilmu.py
backend/tests/: test_computation.py  test_deadlines_holidays.py  test_evidence.py  test_integration_core.py  test_lawcorpus.py  test_models.py  test_obligations.py  test_obligations_holidays.py  test_smoke.py  test_state_field.py  test_tin_validation.py
backend/tests/api/: test_audit_conversation.py  test_audit_defense.py  test_audit_defense_endpoint.py  test_audit_risk.py  test_auth.py  test_citation_critic.py  test_classify_endpoint.py  test_cors.py  test_create_entity_endpoint.py  test_deductibility.py  test_documents.py  test_endpoints.py  test_entity_endpoint.py  test_filing_drafts.py  test_graph.py  test_graph_api.py  test_guest_auth.py  test_integration_e2e.py  test_jsonio.py  test_make_llm.py  test_me_entity_endpoint.py  test_me_filings_endpoint.py  test_msic.py  test_msic_endpoint.py  test_myinvois.py  test_pandai_persona.py  test_persistence.py  test_profiler.py  test_rag.py  test_report.py  test_risk_endpoint.py  test_routing.py  test_upload_endpoint.py  test_validation_envelope.py  trial_balance.csv  trial_balance.xlsx
(+189 files in other folders)
