[project]
name = "cukaipandai-core"
version = "0.1.0"
description = "CukaiPandai deterministic tax-assurance core (stack-independent)"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7", "pyyaml>=6.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cukaipandai_core"]
