[project]
name = "cukaipandai-core"
version = "0.1.0"
description = "CukaiPandai deterministic tax-assurance core + agent layer/API"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "langgraph>=0.2",
    "openai>=1.40",
    "anthropic>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "core",
    "api",
    "api.agents",
    "api.connectors",
]
