[project]
name = "cukaipandai-core"
version = "0.1.0"
description = "CukaiPandai deterministic tax-assurance core + agent layer/API"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "langgraph>=0.2",
    "openai>=1.40",
    "anthropic>=0.34",
    "python-dotenv>=1.0",
    "holidays>=0.50",
    "numpy>=1.26",
    "model2vec>=0.3",
    "psycopg[binary]>=3.1",
    "langgraph-checkpoint-postgres>=2.0",
    "pypdf>=4.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "core",
    "api",
    "api.agents",
    "api.connectors",
]
